# is-odd-ai

./: README.md  pyproject.toml
is_odd_ai/: __init__.py  is_odd.py
tests/: test_is_odd.py
