[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "is-odd-ai"
version = "0.0.2"
authors = [
    { name="recreationx"}
]
description = "A Python package to check if a number is odd using an AI model."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["requests>=2.32"]